--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Nawtys and crosseys</title>
+
+  <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
+
 <body>
 
+  <button type="playerinput" id="box1"></button>
+  <button type="playerinput" id="box2"></button>
+  <button type="playerinput" id="box3"></button>
+  <button type="playerinput" id="box4"></button>
+  <button type="playerinput" id="box5"></button>
+  <button type="playerinput" id="box6"></button>
+  <button type="playerinput" id="box7"></button>
+  <button type="playerinput" id="box8"></button>
+  <button type="playerinput" id="box9"></button>
+
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="scripts/app.js"></script>
+
+
 </body>
+
+
 </html>
