--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 
 <body>
-
-  <button type="playerinput" id="box1"></button>
-  <button type="playerinput" id="box2"></button>
-  <button type="playerinput" id="box3"></button>
-  <button type="playerinput" id="box4"></button>
-  <button type="playerinput" id="box5"></button>
-  <button type="playerinput" id="box6"></button>
-  <button type="playerinput" id="box7"></button>
-  <button type="playerinput" id="box8"></button>
-  <button type="playerinput" id="box9"></button>
+  <div class="click"></div>
+  <button type="playerInput" id="box1"></button>
+  <button type="playerInput" id="box2"></button>
+  <button type="playerInput" id="box3"></button>
+  <button type="playerInput" id="box4"></button>
+  <button type="playerInput" id="box5"></button>
+  <button type="playerInput" id="box6"></button>
+  <button type="playerInput" id="box7"></button>
+  <button type="playerInput" id="box8"></button>
+  <button type="playerInput" id="box9"></button>
 
 
 
