--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 </head>
 
 <body>
-  <div class="click"></div>
-  <button type="playerInput" id="box1"></button>
-  <button type="playerInput" id="box2"></button>
-  <button type="playerInput" id="box3"></button>
-  <button type="playerInput" id="box4"></button>
-  <button type="playerInput" id="box5"></button>
-  <button type="playerInput" id="box6"></button>
-  <button type="playerInput" id="box7"></button>
-  <button type="playerInput" id="box8"></button>
-  <button type="playerInput" id="box9"></button>
+  
+  <button type='playerInput' id="box1"></button>
+  <button type='playerInput' id="box2"></button>
+  <button type='playerInput' id="box3"></button>
+  <button type='playerInput' id="box4"></button>
+  <button type='playerInput' id="box5"></button>
+  <button type='playerInput' id="box6"></button>
+  <button type='playerInput' id="box7"></button>
+  <button type='playerInput' id="box8"></button>
+  <button type='playerInput' id="box9"></button>
 
 
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="scripts/app.js"></script>
+  <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='scripts/app.js'></script>
 
 
 </body>
