--- a/index.html
+++ b/index.html
@@ -3,27 +3,36 @@
 <head>
   <title>Nawtys and crosseys</title>
 
+
   <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
 <body>
+
+<div class='wrapper'>
   
-  <button type='playerInput' id="box1"></button>
-  <button type='playerInput' id="box2"></button>
-  <button type='playerInput' id="box3"></button>
-  <button type='playerInput' id="box4"></button>
-  <button type='playerInput' id="box5"></button>
-  <button type='playerInput' id="box6"></button>
-  <button type='playerInput' id="box7"></button>
-  <button type='playerInput' id="box8"></button>
-  <button type='playerInput' id="box9"></button>
+  <div class='row1'>
+    <button class='playerInput' id="1"></button>
+    <button class='playerInput' id="2"></button>
+    <button class='playerInput' id="3"></button>
+  </div>
+  <div class='row2'>
+    <button class='playerInput' id="4"></button>
+    <button class='playerInput' id="5"></button>
+    <button class='playerInput' id="6"></button>
+  </div>
+  <div class='row3'>
+    <button class='playerInput' id="7"></button>
+    <button class='playerInput' id="8"></button>
+    <button class='playerInput' id="9"></button>
+  </div>
+</div>
 
 
 
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-  <script src='scripts/app.js'></script>
-
+ <script src='scripts/app.js'></script>
 
 </body>
 
