--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 <div class='wrapper'>
   
   <div class='row1'>
-    <button class='playerInput' id="1"></button>
-    <button class='playerInput' id="2"></button>
-    <button class='playerInput' id="3"></button>
+    <button class='playerInput' id='1'></button>
+    <button class='playerInput' id='2'></button>
+    <button class='playerInput' id='3'></button>
   </div>
   <div class='row2'>
-    <button class='playerInput' id="4"></button>
-    <button class='playerInput' id="5"></button>
-    <button class='playerInput' id="6"></button>
+    <button class='playerInput' id='4'></button>
+    <button class='playerInput' id='5'></button>
+    <button class='playerInput' id='6'></button>
   </div>
   <div class='row3'>
-    <button class='playerInput' id="7"></button>
-    <button class='playerInput' id="8"></button>
-    <button class='playerInput' id="9"></button>
+    <button class='playerInput' id='7'></button>
+    <button class='playerInput' id='8'></button>
+    <button class='playerInput' id='9'></button>
   </div>
 </div>
 
-
+<!--  -->
 
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
  <script src='scripts/app.js'></script>
