added sound board

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
 
+<h1>THE FORCE AWAKENS</h1>
+
+
 <div class='wrapper'>
   
   <div class='row1'>
@@ -29,9 +32,16 @@
   </div>
 </div>
 
+<div class='soundButton'>
+
+  <button class="makesound" id="intro">intro</button>
+
+</div>
 <!--  -->
 
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src="scripts/soundmanager2.js"></script>
+
  <script src='scripts/app.js'></script>
 
 </body>
