--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-
+<div class ='starwarslogo'>
+  <img src="images/starwarsattack.png">
+</div>
 
 <div class='wrapper'>
   
@@ -30,13 +32,6 @@
     </div>
 </div>
 
-<div class='soundButton'>
-  <button class="makeSound" id="intro">intro</button>
-</div>
-<!--  -->
-
-
-    
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src="scripts/soundmanager2.js"></script>
 
