--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Nawtys and crosseys</title>
+  <title>Star Wars Toe</title>
 
 
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -30,6 +30,10 @@
       <button class='playerInput' id='8'></button>
       <button class='playerInput' id='9'></button>
     </div>
+</div>
+
+<div class = 'yodaRefresh'>
+<button class="yodaRefresh" onClick="history.go(0)">refresh, you shall</button>
 </div>
 
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
